# libefb

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md
bindings/python/: Cargo.toml  README.md  flightplanner.py  pyproject.toml
bindings/python/docs/: requirements.txt
bindings/python/docs/source/: conf.py  index.rst  reference.rst  userguide.rst
bindings/python/efb/: aircraft.py  core.py  flight_planning.py  fms.py  lib.py  route.py
bindings/python/examples/: flightplanner.py
bindings/python/src/: lib.rs
bindings/python/src/aircraft/: cg_envelope.rs  fuel_tank.rs  mod.rs  station.rs
bindings/python/src/core/: dist.rs  duration.rs  fuel.rs  mass.rs  mod.rs  speed.rs  vertical_distance.rs  volume.rs
bindings/python/src/fms/: flight_planning_builder.rs  mod.rs
bindings/python/src/fp/: fuel_planning.rs  mod.rs  perf.rs
bindings/python/src/measurements/: duration.rs  length.rs  mass.rs  mod.rs  speed.rs  volume.rs
bindings/wasm/: Cargo.toml
bindings/wasm/src/: aircraft.rs  core.rs  fms.rs  fmt.rs  fp.rs  lib.rs  measurements.rs  nd.rs  route.rs
efb/: Cargo.toml
efb/examples/: flightplanner.rs  readme.rs
efb/src/: airspace.rs  algorithm.rs  error.rs  fc.rs  fms.rs  fp.rs  geometry.rs  lib.rs  macros.rs  parser.rs  route.rs
efb/src/aircraft/: builder.rs  cg_envelope.rs  fuel_tank.rs  mod.rs  station.rs
efb/src/core/: angle.rs  density.rs  dist.rs  duration.rs  fuel.rs  mag_var.rs  mass.rs  mod.rs  speed.rs  vertical_distance.rs  volume.rs  wind.rs
efb/src/fms/: mod.rs  printer.rs
efb/src/fms/subs/: flight_planner.rs  flight_planning.rs  mod.rs
efb/src/fp/: builder.rs  decoder.rs  flight_plan.rs  fuel_planning.rs  legs.rs  mb.rs  mod.rs  perf.rs  route.rs  runway_analysis.rs
efb/src/fp/aircraft/: mod.rs  (+2 more)
efb/src/geojson/: geom.rs  mod.rs  route.rs
efb/src/geom/: angle.rs  bbox.rs  coordinate.rs  mod.rs  polygon.rs  units.rs
efb/src/measurements/: angle.rs  constants.rs  density.rs  duration.rs  length.rs  mass.rs  measurement.rs  mod.rs  pressure.rs  speed.rs  temperature.rs  time.rs  unit_of_measure.rs  volume.rs
efb/src/nd/: airac_cycle.rs  airport.rs  airspace.rs  fix.rs  location.rs  mag_var.rs  mod.rs  navaid.rs  runway.rs  waypoint.rs
efb/src/parser/: mod.rs  openair.rs
efb/src/route/: accumulator.rs  leg.rs  mod.rs
efb/tests/: aircraft_mb_test.rs  altering_factor_test.rs  route_decoding_test.rs  runway_analysis_test.rs  takeoff_landing_distance_test.rs
(+125 files in other folders)
