# SPDX-License-Identifier: Apache-2.0
# Copyright 2024 Joe Pearson
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "efb"
version = "0.3.1"
edition = "2021"
authors = ["Joe Pearson"]
license = "Apache-2.0"
keywords = ["aviation", "EFB"]
description = "Electronic Flight Bag library to plan and conduct a flight."
homepage = "https://github.com/pearjo/libefb"
repository = "https://github.com/pearjo/libefb"
readme = "../README.md"

[dependencies]
arinc424 = { path = "../arinc424", version = "0.1.1" }
serde = { version = "1.0.219", features = ["derive", "rc"], optional = true  }
time = "0.3.36"
world_magnetic_model = "0.2.0"

[dev-dependencies]
clap = { version = "4.5.18", features = ["derive"] }

[features]
serde = ["dep:serde"]
