[package]
name = "efb-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
efb = { path = "../../efb", features = ["serde"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }

[lints]
workspace = true
